# binarysearchfile

./: README.md  binarysearchfile.py  binarysearchfile_tests.py  pyproject.toml  setup.py
.github/workflows/: tests.yml
